Preview shows exemplar content if questions not answered
- Use a bunch of if, else, statements to check
  if each question is answered. If not answered
  then we show Faye's sample answers
- If a user answers the questions then we can
  clear the data, and go directly to the preview
  page to view Faye's answers

--- a/app/views/18/pre-sentence-report/offence-analysis.html
+++ b/app/views/18/pre-sentence-report/offence-analysis.html
@@ -77,10 +77,11 @@
                     </thead>
                     <tbody class="govuk-table__body">
                       <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Theft of a
-                          motor vehicle</th>
-                        <td class="govuk-table__cell">Stole a car to the value of
-                          £30,000</td>
+                        <th scope="row" class="govuk-table__header">S18 Wounding
+                          with intent</th>
+                        <td class="govuk-table__cell">Hit a person with a bottle
+                          then kicked and stamped on their head
+                        </td>
                         <td class="govuk-table__cell">12 July 2024</td>
                         <td class="govuk-table__cell">NG</td>
                         <td class="govuk-table__cell">🔼 🔽</td>
