Remove other offences and incorrect tick box guidance

--- a/app/views/18/pre-sentence-report/offence-analysis.html
+++ b/app/views/18/pre-sentence-report/offence-analysis.html
@@ -62,9 +62,7 @@
                     <caption class="govuk-table__caption govuk-table__caption--l">
                       <h2 class="govuk-heading-l">Offences from NDelius</h2>
                       <div id="signIn-hint" class="govuk-hint">Order offences
-                        starting with the most serious at the top. Tick the
-                        checkboxes to include the offences relevant to this report.
-                      </div>
+                        starting with the most serious at the top.</div>
                     </caption>
                     <thead class="govuk-table__head">
                       <tr class="govuk-table__row">
@@ -82,24 +80,6 @@
                         <td class="govuk-table__cell">Hit a person with a bottle
                           then kicked and stamped on their head
                         </td>
-                        <td class="govuk-table__cell">12 July 2024</td>
-                        <td class="govuk-table__cell">NG</td>
-                        <td class="govuk-table__cell">🔼 🔽</td>
-                      </tr>
-                      <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Theft from a
-                          motor vehicle</th>
-                        <td class="govuk-table__cell">Stole Coat, bag and tablet
-                          to the value of £2,500</td>
-                        <td class="govuk-table__cell">12 July 2024</td>
-                        <td class="govuk-table__cell">NG</td>
-                        <td class="govuk-table__cell">🔼 🔽</td>
-                      </tr>
-                      <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Theft</th>
-                        <td class="govuk-table__cell">Using keys stolen from the
-                          car they then went on to take a wallet, purse, and 2
-                          laptops to the value of £5,000</td>
                         <td class="govuk-table__cell">12 July 2024</td>
                         <td class="govuk-table__cell">NG</td>
                         <td class="govuk-table__cell">🔼 🔽</td>
