Tidy up preview
- removed likelihood of reoffending
- fixed typos on warning text on risk analysis
- offences no longer mentions ticking checkboxes

--- a/app/views/18/pre-sentence-report/risk-analysis.html
+++ b/app/views/18/pre-sentence-report/risk-analysis.html
@@ -80,13 +80,13 @@
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                 <strong class="govuk-warning-text__text">
                   <span class="govuk-visually-hidden">Warning</span>
-                  You must complete both an OASys Layer 1 Assessment to inform
-                  the the risk predictors.
+                  You must complete an OASys Layer 1 Assessment to inform the
+                  risk predictors.
                 </strong>
               </div>
               <p class="govuk-body">
                 <span class="govuk-hint">Enter the risk predictor scores from
-                  OASys</span>
+                  OASys.</span>
               </p>
               <div class="govuk-form-group">
                 {{ govukSelect({
