Update to index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,10 @@
       Pre-sentence report prototype</a></p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
+        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-4203">
+          Update copy changes throughout</a></p>
+      </li>
+      <li>
         <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-4206">
           Increment to v19</a></p>
       </li>
