--- a/app/views/19/pre-sentence-report/offence-analysis.html
+++ b/app/views/19/pre-sentence-report/offence-analysis.html
@@ -68,7 +68,7 @@
                       <tr class="govuk-table__row">
                         <th scope="col" class="govuk-table__header">Offence</th>
                         <th scope="col" class="govuk-table__header">Description</th>
-                        <th scope="col" class="govuk-table__header">Offence Date</th>
+                        <th scope="col" class="govuk-table__header">Offence date</th>
                         <th scope="col" class="govuk-table__header">Plea</th>
                         <th scope="col" class="govuk-table__header">Order</th>
                       </tr>
@@ -92,13 +92,13 @@
               <div class="govuk-form-group">
                 <h2 class="govuk-heading-l">Analysis of offences under
                   consideration</h2>
-                <p class="govuk-body">Give a comprehensive analysis of the
+                <p class="govuk-hint">Give a comprehensive analysis of the
                   offences relevant to this report, considering:</p>
-                <ul class="govuk-list govuk-list--bullet">
+                <ul class="govuk-list govuk-list--bullet govuk-hint">
                   <li>the nature and impact of the offences and the defendant's
                     understanding of this</li>
                   <li>the defendant's level of responsibility, planning or
-                    pre-meditation and their role</li>
+                    premeditation and their role</li>
                   <li>the factors relating to the offence including the defendant's
                     lifestyle considerations
                   </li>
@@ -108,10 +108,10 @@
               <div class="govuk-form-group">
                 <h2 class="govuk-heading-l">Pattern of offending and response to
                   supervision</h2>
-                <p class="govuk-body">Analyse factors linked to previous
-                  offences, patterns in offending and offence/s similar in
+                <p class="govuk-hint">Analyse factors linked to previous
+                  offences, patterns in offending and offences similar in
                   nature to the current offences under consideration.</p>
-                <p class="govuk-body">
+                <p class="govuk-hint">
                   You should also highlight any previous responses to
                   supervision that did or did not work as well as support that
                   may reduce the chances of offending or circumstances that may
