Updated in line with miro

--- a/app/views/19/pre-sentence-report/behavioural-factors-and-lifestyle-considerations.html
+++ b/app/views/19/pre-sentence-report/behavioural-factors-and-lifestyle-considerations.html
@@ -66,7 +66,7 @@
                     <li>rehabilitative needs that require intervention</li>
                     <li>the defendant's capacity and motivation to address
                       offending</li>
-                    <li>identification of protective factors</li>
+                    <li>protective factors</li>
                   </ul>
                   <p class="govuk-body govuk-hint">Provide a considered analysis,
                     do not just describe or list all factors linked to offending.</p>
