Update to risk analysis in line with Miro

--- a/app/views/19/pre-sentence-report/risk-analysis.html
+++ b/app/views/19/pre-sentence-report/risk-analysis.html
@@ -60,7 +60,7 @@
               </h1>
               <div class="govuk-form-group">
                 <h2 class="govuk-heading-l">
-                  Four step process of risk assessment
+                  The four step process of risk assessment
                 </h2>
                 <p class="govuk-body">
                   This is a step-by-step process to help you
@@ -190,7 +190,7 @@
                         </label>
                         <p class="govuk-body">Use the OSP (OASys Sexual
                           Predictor) as the basis of your risk analysis for
-                          those with a current or past sexual offence. This
+                          defendants with a current or past sexual offence. This
                           includes sexually motivated offences.</p>
                         <textarea class="govuk-textarea" id="analyse-risk-of-sexual-offence" name="analyse-risk-of-sexual-offence" rows="8">{{data['analyse-risk-of-sexual-offence']}}</textarea>
                       </div>
@@ -213,10 +213,10 @@
                     factors you've identified, create a risk analysis based on:</span></p>
                   <ul class="govuk-list govuk-list--bullet govuk-hint">
                     <li>the longer-term influences (positive and negative) on
-                      the defendant's behaviour, and then the more recent
+                      the defendant's behaviour, and the more recent
                       influences based on professional assessment</li>
-                    <li>the defendant's circumstances both past and present and
-                      how this may influence offending</li>
+                    <li>the defendant's circumstances (past and present) and
+                      how these may influence offending</li>
                     <li>the potential impact on victims</li>
                     <li>your reasoning behind which RoSH (Risk of Serious Harm)
                       level is appropriate</li>
