Updates to Sentencing proposal

--- a/app/views/19/pre-sentence-report/sentencing-proposal.html
+++ b/app/views/19/pre-sentence-report/sentencing-proposal.html
@@ -84,7 +84,7 @@
                   </summary>
                   <div class="govuk-details__text">
                     <p class="govuk-body">You need to consider the information
-                      contained within the following pages:</p>
+                      contained within:</p>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>offence analysis</li>
                       <li>behavioural factors and lifestyle considerations</li>
@@ -121,9 +121,8 @@
                     Alternative sentencing options
                   </label>
                 </h2>
-                <p class="govuk-body govuk-hint">Explain what alternative
-                  sentencing options have been considered but not included in
-                  your sentencing proposal.</p>
+                <p class="govuk-body govuk-hint">Explain what you've considered 
+                  but not included in your sentencing proposal.</p>
                 <textarea class="govuk-textarea" id="alternative-sentencing-options" name="alternative-sentencing-options" rows="10">{{data['alternative-sentencing-options']}}</textarea>
               </div>
             </div>
