Updates to preview report in line with Miro

--- a/app/views/19/pre-sentence-report/preview-report.html
+++ b/app/views/19/pre-sentence-report/preview-report.html
@@ -1339,7 +1339,7 @@
                           {% if(data['analyse-risk-of-domestic-abuse']) %}
                             <p class="govuk-body">{{data['analyse-risk-of-domestic-abuse']}}</p>
                           {% else %}
-                          <p class="govuk-body">No, risk of domestic abuse</p>
+                          <p class="govuk-body">No risk of domestic abuse</p>
                           {% endif %}
                         </div>
                         <div class="govuk-form-group">
@@ -1663,11 +1663,11 @@
                               </td>
                             </tr>
                             <tr class="govuk-table__row">
-                              <th scope="row" class="govuk-table__header">Author's Team:</th>
+                              <th scope="row" class="govuk-table__header">Author's team:</th>
                               <td class="govuk-table__cell">Court admin team 12</td>
                             </tr>
                             <tr class="govuk-table__row">
-                              <th scope="row" class="govuk-table__header">Author's Team Email:</th>
+                              <th scope="row" class="govuk-table__header">Author's team email:</th>
                               <td class="govuk-table__cell">court-admin-team-12@justice.gov.uk</td>
                             </tr>
                           </tbody>
@@ -1926,13 +1926,13 @@
                               <td class="govuk-table__cell">95/22151311354XY</td>
                             </tr>
                             <tr class="govuk-table__row">
-                              <th scope="row" class="govuk-table__header">Requesting Court:</th>
+                              <th scope="row" class="govuk-table__header">Requesting court:</th>
                               <td class="govuk-table__cell">Oxford and Southern Oxfordshire Magistrates Court</td>
                               <th scope="row" class="govuk-table__header">Date requested:</th>
                               <td class="govuk-table__cell">21/08/2024</td>
                             </tr>
                             <tr class="govuk-table__row">
-                              <th scope="row" class="govuk-table__header">Sentencing Court:</th>
+                              <th scope="row" class="govuk-table__header">Sentencing court:</th>
                               <td class="govuk-table__cell">Oxford and Southern Oxfordshire Magistrates Court</td>
                               <th scope="row" class="govuk-table__header">Date completed:</th>
                               <td class="govuk-table__cell">ADDED WHEN THE THING IS PUBLISHED</td>
