Updates to offence analysis

--- a/app/views/19/pre-sentence-report/offence-analysis.html
+++ b/app/views/19/pre-sentence-report/offence-analysis.html
@@ -92,7 +92,7 @@
               <div class="govuk-form-group">
                 <h2 class="govuk-heading-l">Analysis of offences under
                   consideration</h2>
-                <p class="govuk-hint">Give a comprehensive analysis of the
+                <p class="govuk-body govuk-hint">Give a comprehensive analysis of the
                   offences relevant to this report, considering:</p>
                 <ul class="govuk-list govuk-list--bullet govuk-hint">
                   <li>the nature and impact of the offences and the defendant's
@@ -108,10 +108,10 @@
               <div class="govuk-form-group">
                 <h2 class="govuk-heading-l">Pattern of offending and response to
                   supervision</h2>
-                <p class="govuk-hint">Analyse factors linked to previous
+                <p class="govuk-body govuk-hint">Analyse factors linked to previous
                   offences, patterns in offending and offences similar in
                   nature to the current offences under consideration.</p>
-                <p class="govuk-hint">
+                <p class="govuk-body govuk-hint">
                   You should also highlight any previous responses to
                   supervision that did or did not work as well as support that
                   may reduce the chances of offending or circumstances that may
