Update to risk analysis page

--- a/app/views/19/pre-sentence-report/risk-analysis.html
+++ b/app/views/19/pre-sentence-report/risk-analysis.html
@@ -62,11 +62,11 @@
                 <h2 class="govuk-heading-l">
                   The four step process of risk assessment
                 </h2>
-                <p class="govuk-body">
+                <p class="govuk-body govuk-hint">
                   This is a step-by-step process to help you
                   make a decision about whether someone poses Low, Medium, High
                   or Very High risk of serious harm. Follow this process by:</p>
-                <ul class="govuk-list govuk-list--number">
+                <ul class="govuk-list govuk-list--number govuk-hint">
                   <li>confirming risk predictors</li>
                   <li>analysing relevant risk and protective factors</li>
                   <li>assessing immediacy and likelihood of future offending</li>
@@ -215,7 +215,7 @@
                     <li>the longer-term influences (positive and negative) on
                       the defendant's behaviour, and the more recent
                       influences based on professional assessment</li>
-                    <li>the defendant's circumstances (past and present) and
+                    <li>the defendant's circumstances (past and present and
                       how these may influence offending</li>
                     <li>the potential impact on victims</li>
                     <li>your reasoning behind which RoSH (Risk of Serious Harm)
