FIX added missing bracket

--- a/app/views/19/pre-sentence-report/risk-analysis.html
+++ b/app/views/19/pre-sentence-report/risk-analysis.html
@@ -215,7 +215,7 @@
                     <li>the longer-term influences (positive and negative) on
                       the defendant's behaviour, and the more recent
                       influences based on professional assessment</li>
-                    <li>the defendant's circumstances (past and present and
+                    <li>the defendant's circumstances (past and present) and
                       how these may influence offending</li>
                     <li>the potential impact on victims</li>
                     <li>your reasoning behind which RoSH (Risk of Serious Harm)
